--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "^16.0.7",
+    "@supabase/supabase-js": "^2.86.2",
+    "next": "^16.1.0-canary.15",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
