--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
     "next": "^16.1.0-canary.15",
     "nodemailer": "^7.0.12",
+    "p-retry": "^7.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
