--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "crons": [ { "path": "/api/send-notifications", "schedule": "*/5 * * * *" } ] }
+{
+  "crons": [
+    {
+      "path": "/api/send-notifications",
+      "schedule": "*/5 * * * *"
+    }
+  ]
+}
