--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/send-notifications",
+      "path": "api/sendNotifications.js",
       "schedule": "*/5 * * * *"
     }
   ]
